feat:完成安卓客户端迁移

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">miramate-v2-client</string>
-    <string name="title_activity_main">miramate-v2-client</string>
+    <string name="app_name">MiraMate</string>
+    <string name="title_activity_main">MiraMate</string>
     <string name="package_name">com.contrue.miramate</string>
     <string name="custom_url_scheme">com.contrue.miramate</string>
 </resources>
